# pg-vectorstore-boilerplate

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  template.env
database/scripts/: init.sql
src/database/: __init__.py  models.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 20250810221331_f1d8cbc97814_init_vectorstore.py
