[project]
name = "pg-vectorstore-boilerplate"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.10"
dependencies = [
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "pgvector<0.4",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]
